2006-08-14	Benedikt Meurer <benny@xfce.org>

	* xfce4-session/main.c: Reap child processes to avoid sudo zombies
	  when cancelling the logout dialog. Bug #2088.
	* xfce4-session/xfsm-shutdown-helper-hal.c, AUTHORS, NEWS, README,
	  configure.in.in, xfce4-session/Makefile.am: Add support for HAL
	  to shutdown/reboot the computer, based on the Xubuntu patch by
	  Jani Monoses <jani@ubuntu.com>. Bug #2046.

2006-08-12	Benedikt Meurer <benny@xfce.org>

	* xfce4-tips/main.c(main): Fake a session id, so the session manager
	  will not save the tips as part of the session. Bug #1089.

2006-07-16	Benedikt Meurer <benny@xfce.org>

	* engines/balou/config.c, xfce4-session/xfsm-legacy.c: Apply patch
	  from Nick Schermer <nick@xfce.org> to fix a bunch of compiler
	  warnings.

2006-07-10	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Post-release version bump.

2006-07-10	Benedikt Meurer <benny@xfce.org>

	* === Released 4.3.90.2 ===
	* NEWS, configure.in.in: Bump version.
	* po/*.po: Update Project-Id-Version.

2006-05-15	Benedikt Meurer <benny@xfce.org>

	* xfce4-session/xfsm-manager.c(xfsm_manager_close_connection): Run
	  discard command when client terminates in IDLE state.
	* xfce4-session.rc: Add Thunar to the default session. Bug #1465.

2006-05-04	Benedikt Meurer <benny@xfce.org>

	* xfce4-tips/main.c: Use newly added XfceTitledDialog.
	* configure.in.in: Bump required package versions.
	* settings/session/session.c, settings/splash/splash.c: Use newly
	  added XfceTitledDialog.
	* engines/balou/config.c, engines/simple/simple.c: Make sure we can
	  still use XfceFramebox for now. Will be updated later.
	* xfce4-autostart-editor/xfae-model.c(xfae_item_new): Remove unused
	  variable.
	* po/xfce4-session.pot, po/*.po: Updated.

2006-05-04	Benedikt Meurer <benny@xfce.org>

	* xfce4-autostart-editor/xfae-model.c(xfae_item_new): Properly handle
	  OnlyShowIn and NotShowIn in the autostart editor.

2006-04-19	Benedikt Meurer <benny@xfce.org>
