@@ -23,13 +23,6 @@
 #include <config.h>
 #endif
 
-#ifdef HAVE_SYS_TYPES_H
-#include <sys/types.h>
-#endif
-#ifdef HAVE_SYS_WAIT_H
-#include <sys/wait.h>
-#endif
-
 #ifdef HAVE_ERRNO_H
 #include <errno.h>
 #endif
@@ -229,14 +222,6 @@ initialize (int argc, char **argv)
 }
 
 
-static void
-sigchld (gint signo)
-{
-  gint status;
-  wait (&status);
-}
-
-
 int
 main (int argc, char **argv)
 {
@@ -247,7 +232,6 @@ main (int argc, char **argv)
   
   /* install required signal handlers */
   signal (SIGPIPE, SIG_IGN);
-  signal (SIGCHLD, sigchld);
 
   gtk_init (&argc, &argv);
 
